--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "formik": "^2.4.6",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-maps": "^1.15.2",
+    "react-native-permissions": "^4.1.5",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
     "react-redux": "^9.1.2",
