--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,7 +1,12 @@
 apply plugin: "com.android.application"
 apply plugin: "org.jetbrains.kotlin.android"
 apply plugin: "com.facebook.react"
+//apply from: file("../../node_modules/react-native-vector-icons/fonts.gradle")
+project.ext.vectoricons = [
+        iconFontNames: [ 'MaterialIcons.ttf', 'EvilIcons.ttf' ,"Ionicons.ttf"] // Specify font files
+]
 
+apply from: file("../../node_modules/react-native-vector-icons/fonts.gradle")
 /**
  * This is the configuration block to customize your React Native Android app.
  * By default you don't need to apply any configuration, just uncomment the lines you need.
@@ -118,7 +123,9 @@ dependencies {
   implementation 'com.google.android.gms:play-services-base:18.0.1'
   implementation 'com.google.android.gms:play-services-location:19.0.1'
   implementation 'com.google.android.gms:play-services-maps:18.0.2'
-
+  implementation project(':react-native-vector-icons')
+implementation 'com.google.android.gms:play-services-measurement-base:22.0.0'
+    implementation 'com.google.android.gms:play-services-location:21.2.0'
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-android")
     } else {
