--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native": "0.74.1",
     "react-native-maps": "^1.15.2",
     "react-native-permissions": "^4.1.5",
+    "react-native-raw-bottom-sheet": "^3.0.0",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
     "react-native-vector-icons": "^10.1.0",
