--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.6.3",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
@@ -17,9 +18,10 @@
     "formik": "^2.4.6",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-gesture-handler": "^2.16.2",
     "react-native-maps": "^1.15.2",
-    "react-native-permissions": "^4.1.5",
-    "react-native-raw-bottom-sheet": "^3.0.0",
+    "react-native-permissions": "^4.1.5",    
+    "react-native-reanimated": "^3.11.0",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
     "react-native-vector-icons": "^10.1.0",
