--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "formik": "^2.4.6",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.16.2",
     "react-native-maps": "^1.15.2",
-    "react-native-permissions": "^4.1.5",    
+    "react-native-permissions": "^4.1.5",
     "react-native-reanimated": "^3.11.0",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
