--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-gesture-handler": "^2.16.2",
     "react-native-maps": "^1.15.2",
     "react-native-permissions": "^4.1.5",
+    "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "^3.11.0",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
